command shift R reloads all CSS. fixed styling for index and login page

--- a/public/stylesheets/users/index.css
+++ b/public/stylesheets/users/index.css
@@ -14,12 +14,12 @@ div.container {
     background-color: rgb(34, 34, 34);
   }
 
-h1.logo{
-    position: relative;
+h1#intro {
+    position: absolute;
     font-size: 27;
-    top: 50px;
+    top: -4.8px;
     left: 90px;
-    color: rgb(177, 17, 17);
+    color: rgb(248, 248, 248);
 }
 
 h1#signup {
@@ -37,7 +37,6 @@ h1#signup {
 form {
     margin-top: 30px
 }
-
 input {
     font-size: 18px;
     padding: 10px;
